--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -96,7 +96,7 @@
     height: 100vh;
     /* height: 100%; */
     min-height: 720px;
-    max-height: 720px;
+    /* max-height: 720px; */
     padding-right: 1.5rem;
     display: flex;
     flex-direction: column;
