--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -12,45 +12,36 @@
 
 
 /* 
-+ ---------- Dashboard_Page_Section ----------
++   ---- Dashboard_Page_Section ----
 */
 
-
 .Dashboard_Page_Section {
-    background-color: var(--Dashboard_Background_Color);
-    height: 100vh;
+    position: relative;
     width: 100vw;
+    height: 100vh;
+    min-height: 100vh;
+    background-color: var(--Dashboard_Background_Color);
+    padding: 0 20px;
+    transition: 250ms ease-in-out backgroun d-color;
     display: flex;
-    column-gap: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    min-height: 745px;
-    transition: 250ms ease-in-out background-color;
+    gap: 20px;
 }
 
 
 /* 
-+ ---------- Dashboard_Side_Bar ----------
++   ---- Dashboard_Side_Bar ----
 */
 
 
 .Dashboard_Side_Bar {
-    position: relative;
+    min-width: 90px;
     background-color: var(--Dashboard_Background_Color);
-    width: 115px;
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 25px;
-    box-shadow: 0px 0 8px rgba(0, 0, 0, 0.2);
-}
-
-
-@media(width <= 600px) {
-    .Dashboard_Side_Bar {
-        display: none;
-    }
+    /* padding-bottom: 25px; */
+    box-shadow: 0px 0 8px rgba(0, 0, 0, 0.1);
 }
 
 
@@ -58,7 +49,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 15px;
+    gap: 7px;
     margin-top: 5rem;
     font-size: 1.5rem;
 }
@@ -72,633 +63,210 @@
     border-radius: 50%;
     color: rgba(0, 0, 0, 0.5);
     cursor: pointer;
-    transition: 200ms ease-in-out background-color, 
+    transition: 
+        200ms ease-in-out background-color, 
         200ms ease-in-out color,
-        200ms ease-in-out box-shadow;
+        200ms ease-in-out box-shadow
+    ;
 }
 
 
 .Side_Bar_Nav_Link:hover {
     background-color: white;
     color: var(--Blue_Color);
-    /* box-shadow: 0 0 5px rgb(117, 75, 229, 0.2); */
+    /* box-shadow: 0 0 5px rgb(117, 75, 229, 0.3); */
 }
 
 
-/* 
-+ ---------- Dashboard_Center ----------
-*/
+/* ---- Main_Dashboard ----  */
 
 
-.Dashboard_Center {
-    position: relative;
+.Main_Dashboard {
     width: 100%;
-    height: 100vh;
-    /* height: 100%; */
-    min-height: 720px;
-    /* max-height: 720px; */
-    padding-right: 1.5rem;
+    height: 100%;
+    color: black;
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    /* border: 2px solid blue; */
+    gap: 2rem;
 }
 
 
-@media(width <= 600px) {
-    .Dashboard_Center {
-        padding-left: 1.5rem;
-    }
-}
+/* ---- Dashboard_Header ---- */
 
-
-/* 
-+ ---------- Top_Of_Dashboard ----------
-*/
-
-
-.Top_Of_Dashboard {
-    display: flex;
-    color: black;
+.Dashboard_Header {
+    position: relative;
     width: 100%;
     margin-top: 2rem;
-}
-
-
-/*
-+ ------------ Menu_and_Search_Box ------------- left Side --------------
-*/
-
-#Top_Of_Dashboard_Slack_Box {
-    display: none;
-}
-
-
-@media(width <= 600px) {
-    #Top_Of_Dashboard_Slack_Box {
-        display: flex;
-    }
-}
-
-
-.Menu_and_Search_Box {
     display: flex;
     align-items: center;
-    gap: 20px;
-    width: 100%;
-    padding-right: 15px;
-    /* border: 2px solid blue; */
+    gap: 10px;
 }
 
 
-
-@media(width <= 600px) {
-    .Menu_and_Search_Box {
-        display: none;
-    }
-}
-
-
-#Menu_Outline {
-    font-size: 1.7rem;
-    cursor: pointer;
-    color: rgba(0, 0, 0, 0.6);
-    transition: 250ms ease-in-out color;
-}
-
-
-.Search_and_Icon {
-    position: relative;
-    width: 100%;
-    /* border: 2px solid; */
-}
-
-
-#Search_Outline { 
-    position: absolute; 
-    top: 50%;
-    transform: translateY(-50%);
-    left: 15px;
-    color: rgba(0, 0, 0, 0.6);
-}
-
-
-.Search_and_Icon input[type="search"] {
-    color: rgba(0, 0, 0, 0.8);
-    font-size: 12px;
-    border-radius: 50px;
-    border: none;
-    outline: none;
-    width: 100%;
-    max-width: 280px;
-    padding: 9px 15px 9px 40px;
-}
-
-/* 
-+ ------------ Profile_and_Light_Dark_Mode ------------- Right Side --------------
-*/
-
-.Profile_and_Light_Dark_Mode {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    margin-left: auto;
-    /* border: 2px solid; */
-}
-
-
-#Moon { 
-    color: rgb(0, 0, 0, 0.4);  
-    font-size: 1.3rem; 
-    cursor: pointer;
-    transition: 250ms ease-in-out color;
-}
-
-
-#Profile_Image {
-    object-fit: cover;
-    border-radius: 50%;
-    width: 40px;
+.Link_Btn {
     height: 40px;
-    border: 2px solid white;
-}
-
-
-.Profile_and_Name {
-    position: relative;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    color: rgb(0, 0, 0, 0.5);
-    font-weight: 500;
-    transition: 250ms ease-in-out color;
-    /* border: 2px solid; */
-}
-
-
-#Seperate_Vertical_Line {
-    height: 25px;
-    width: 2px;
-    border-radius: 50px;
-    background-color: rgba(0, 0, 0, 0.4);
-    transition: 250ms ease-in-out background-color;
-}
-
-
-
-/* 
-+ ---------- Projects_Activity_Grid ------------ 
-*/
-
-
-.Projects_Activity_Grid {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    gap: 30px;
-    color: black;
-    overflow: hidden;
-    /* border: 3px solid red; */
-}
-
-.Projects_Activity_Grid::-webkit-scrollbar { display: none; }
-
-
-
-@media(width <= 810px) {
-    .Projects_Activity_Grid {
-        overflow: auto;
-        flex-direction: column;
-        /* flex-direction: column-reverse; */
-    }
-}
-
-
-/*
-+ ---------- Left Side of Dashboard ------------ 
-*/
-
-
-.Projects_Container {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
+    width: 40px;
     background-color: white;
-    border-radius: 20px;
-    /* padding: 25px; */
-}
-
-
-.Dashboard_HeadLine {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 25px;
-}
-
-
-/* @media (width <= 450px) {
-    .Dashboard_HeadLine {
-        display: none;
-    }
-} */
-
-
-.Dashboard_HeadLine p {
-    font-size: 20px;
-    font-weight: bold;
-}
-
-
-.Dashboard_HeadLine div:nth-child(2) {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-}
-
-
-.Dashboard_HeadLine div:nth-child(2) button {
-    padding: 10px 36px;
-    font-size: 12px;
-    color: white;
-    font-weight: bold;
-    background-color: var(--Blue_Color);
-    border: none;
+    color: black;
     outline: none;
     border-radius: 50px;
-    /* border: 2px solid; */
-}
-
-
-@media (width <= 600px) {
-    #SVG {
-        width:34px;
-        height:30px;
-    }
-
-    .Dashboard_HeadLine p {
-        font-size: 16px;
-    }
-
-    .Dashboard_HeadLine div:nth-child(2) button {
-        padding: 10px 26px;
-        font-size: 10px;
-    }
-}
-
-
-
-.Dashboard_HeadLine div:nth-child(2) * { cursor: pointer; }
-
-/* 
-+ ---------- Projects_Grid ------------ 
-*/
-
-
-
-.Projects_Grid {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
-    gap: 15px;
-    align-items: center;
-    justify-items: center;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    padding: 25px;
-}
-
-
-.Projects_Grid::-webkit-scrollbar { display: none; }
-
-
-.Each_Project {
-    width: 100%;
-    /* min-height: 170px; */
-    max-height: 180px;
-    background: #FFFFFF;
-    box-shadow: 0px 4px 25px 5px rgba(224, 235, 255, 0.75);
-    border-radius: 15px;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-
-/* 
-+ ----------- Top_Of_Project -----------
-*/
-
-
-.Top_Of_Project {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-}
-
-
-.Top_Of_Project span:nth-child(1) {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-
-.Top_Of_Project span:nth-child(1) p {
-    font-size: 12px;
-    /* max-width: 170px; */
-    color: var(--Blue_Color);
-    font-weight: bold;
-    padding: 7px 23px;
-    border-radius: 50px;
-    background-color: var(--White_Blue_Color);
-}
-
-
-#Dots {
-    color: rgba(0, 0, 0, 0.3);
-    cursor: pointer;
-    font-size: 20px;
-}
-
-
-.Project_Text {
-    font-weight: 600;
-    font-size: 11px;
-    height: 55px;
-    line-height: 14px;
-    color: rgba(0, 0, 0, 0.5);
-    width: 100%;
-    overflow-y: scroll;
-    /* min-height: 100%; */
-    /* max-width: 270px; */
-    /* word-break: break-all; */
-    /* word-wrap: break-word; */
-    /* border: 2px solid; */
-}
-
-
-.Project_Text::-webkit-scrollbar {
-    display: none;
-}
-
-/* 
-+ ----------- Bottom_Of_Project -----------
-*/
-
-
-.Bottom_Of_Project {
-    position: relative;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    /* border: 2px solid ; */
-}
-
-
-.Progress_and_Percentage_Container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    font-weight: bold;
-    font-size: 10px;
-    color: rgba(0, 0, 0, 0.6);
-    text-align: right;
-}
-
-
-.Progress_Background {
-    position: relative;
-    background-color: var(--White_Blue_Color);
-    width: 100%;
-    height: 7px;
-    border-radius: 50px;
-    overflow: hidden;
-}
-
-
-.Progress_Bar {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    height: 100%;
-    width: 20%;
-    background-color: var(--Blue_Color);
-}
-
-
-.People_Comments_Picture_Container {
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-
-.People_Container {
-    display: flex;
-    align-items: center;
-}
-
-
-.People {
-    background-color: var(--White_Blue_Color);
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    border: 1px solid #FFFFFF;
-}
-
-
-.People:not(first-child) {
-    margin-right: -5px;
-}
-
-
-.Comments_Picture {
-    display: flex;
-    align-items: center;
-    gap: 7px;
-    color: rgba(0, 0, 0, 0.5);
-}
-
-
-.Comments_Picture div {
-    display: flex;
-    align-items: center;
-    gap: 2px;
-}
-
-
-.Comments_Picture div p { font-size: 8px; }
-
-.Comments_Picture div * { cursor: pointer; }
-
-
-
-/* 
-+ ---------- Right Side of Dashboard ------------ 
-*/
-
-
-.Activity_Data_Container {
-    height: 100%;
-    width: 100%;
-    max-width: 317px;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-}
-
-
-.Activity_Data_Container article:nth-child(1) {
-    height: 430px;
-    background-color: white;
-    border-radius: 20px;
-    padding: 28px 20px;
-}
-
-
-@media(width <= 810px) {
-    .Activity_Data_Container{
-        max-width: none;
-    }
-
-    .Activity_Data_Container article:nth-child(1) {
-        max-width: none;
-    }
-}
-
-
-/* 
-+ ---------- Top_Of_Activity_Data ------------ 
-*/
-
-.Top_Of_Activity_Data {
-    position: relative;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-
-.Top_Of_Activity_Data span {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 8px;
-}
-
-
-#Activity { font-size: 18px;}
-
-
-#Percentage {
-    font-size: 18px;
-    color: #855CF8;
-}
-
-
-#Fast_and_Efficient {
-    font-size: 15px;
-    color: rgba(0, 0, 0, 0.5);
-}
-
-
-.Activity_Data_SVG { 
-    width: 100%;
-    height: 120px;
-    /* border: 2px solid ; */
-}
-
-
-/* 
-+ ---------- Activity_Data_SVG ------------ 
-
-*/
-
-
-.Bottom_Of_Activity_Data {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    margin-top: 20px;
-    padding: 0 8px;
-}
-
-
-.Bottom_Of_Activity_Data p:nth-child(1) {
-    font-size: 20px;
-    font-weight: bold;
-}
-
-
-.Tech_Used_Container {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    width: 100%;
-}
-
-
-.Tech {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-}
-
-
-.Tech label {
-    font-size: 10px;
-    color: rgba(0, 0, 0, 0.6);
-}
-
-
-.Progress_Background_Tech {
-    position: relative;
-    background-color: var(--White_Blue_Color);
-    width: 100%;
-    height: 7px;
-    border-radius: 50px;
-    display: block;
-    overflow: hidden;
-}
-
-
-.Progress_Bar_Tech {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    height: 100%;
-    width: 20%;
-    background-color: var(--Blue_Color);
-}
-
-
-
-
-.Activity_Data_Container article:nth-child(2) {
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 317px;
-    height: 170px;
-    background-color: white;
-    border-radius: 20px;
-    padding: 20px;
-    /* height: calc(100% - 430px); */
+    border: none;
+    cursor: pointer;
 }
 
 
-#Chart_SVG {
+.Dashboard_Header article {
+    height: 100%;
+    max-width: 280px;
+    min-height: 40px;
+    max-height: 40px;
+    background-color: white;
+    border-radius: 50px;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: 200ms ease-in-out width, 200ms ease-in-out max-width;
+    /* border: 1px solid black; */
+}
+
+
+.Dashboard_Header article input[type="text"] {
     width: 100%;
+    height: 40px;
+    color: rgba(0, 0, 0, 0.8);
+    padding-right: 15px;
+    border-radius: 50px;
+    outline: none;
+    border: none;
+}
+
+
+.Search_Icon_Container {
+    min-width: 40px;
+    height: 100%;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+
+.Main_Dashboard article .Search_Icon {
+    color: black; 
+}
+
+
+/* ---- Dashboard_Content ---- */
+
+
+.Dashboard_Content {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    min-height: 620px;
+    max-height: 620px;
+
+    /* border: 1px solid black; */
+    /* display: flex; */
+}
+
+
+.Projects_Container {
+    position: relative;
+    width: 100%;
+    /* width: 75%; */
+    height: 100%;
+    padding: 1.5rem;
+    border-radius: 15px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    overflow-y: scroll;
+}
+
+
+.Projects_Container::-webkit-scrollbar {
+    display: none;
+}
+
+
+.Projects {
+    background: #FFFFFF;
+    list-style: none;
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+    gap: 15px;
+}
+
+
+.Each_Project {
+    height: 165px;
+    width: 100%;
+    background-color: white;
+    padding: 15px;
+    border-radius: 15px;
+    box-shadow: 0px 4px 25px 5px rgba(224, 235, 255, 0.75);
+    transition: 200ms ease-in-out box-shadow, 200ms ease-in-out border;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+
+.Each_Project:hover {
+    box-shadow: 0px 4px 25px 5px rgba(137, 43, 226, 0.3);
+}
+
+
+.Project_Header {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+}
+
+
+.Source_Code {
+    font-size: 20px;
+    color: black;
+}
+
+
+.Each_Project .Description {
+    /* height: 55px; */
+    height: 100%;
+    width: 100%;
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 12px;
+    /* line-height: 14px; */
+    font-weight: 600;
+    overflow-y: scroll;
+    /* border: 1px solid black */
+
+}
+
+
+.Each_Project .Description::-webkit-scrollbar {
+    display: none;
+}
+
+
+.Project_Header .Titles {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;  
+    color: var(--Blue_Color);
+    padding: 7px 23px;
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 50px;
+    background-color: var(--White_Blue_Color);
+
 }
