--- a/src/styles/Other_Pages.css
+++ b/src/styles/Other_Pages.css
@@ -1,4 +1,3 @@
-
 :root {
     --Font_Open_Sans: 'Open Sans', sans-serif;
     --Font_Merienda_One: 'Merienda One', cursive;
@@ -24,9 +23,6 @@
     --Works_Page_Field_Box_Shadow_Hover: 0px 0px 30px 5px #98D4FF;
 
     --Skill_Page_Contacts_Box_Background_color: #12121A;
-
-
-
 }
 
 
@@ -58,7 +54,7 @@
     position: relative;
     display: grid;
     grid-template-columns: 0.8fr 1fr;
-    grid-template-rows: 1fr;
+    gap: 1rem;
     height: 100%;
     width: 100%;
     max-width: 1440px;
@@ -83,25 +79,17 @@
     position: relative;
     width: 100%;
     height: 100%;
+    /* padding: 0 1rem; */
 }
 
 
 .About_Page_Robot {
+    height: 550px;
+    max-width: 100%;
     position: absolute;
-    left: 20px;
-    bottom: 0;
-    width: 597px;
-    height: 730px;
-    object-fit: cover;
-    filter: brightness(130%);
-}
-
-
-@media (width <= 1200px) {
-    .About_Page_Robot {
-        width: calc(597px - 70px);
-        height: calc(730px - 70px);    
-    }
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 
@@ -169,7 +157,7 @@
     font-size: var(--About_Text_Size);
     line-height: 35px;
     max-width: 750px;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
     color: var(--Green_Color);
 }
 
@@ -331,6 +319,7 @@
 .Experience_Field {
     background-color: var(--Works_Page_Field_Boxes_Color);
     max-width: 400px;
+    max-height: 300px;
     padding: 25px 15px 25px 15px;
     display: flex;
     flex-direction: column;
@@ -365,12 +354,22 @@
 
 .Field_Texts {
     color: var(--Green_Color);
+    height: 100%;
     font-weight: 600;
-    font-size: 11px;
-    line-height: 28px;
+    /* font-family: sans-serif; */
+    font-size: 13px;
+    /* line-height: 28px; */
+    line-height: 22px;
     text-align: center;
     text-transform: capitalize;
     transition: 200ms ease-in-out color;
+    overflow-y: scroll;
+    /* border: 1px solid white; */
+}
+
+
+.Field_Texts::-webkit-scrollbar {
+    display: none;
 }
 
 
@@ -379,54 +378,60 @@
 }
 
 
-
-
 /* 
-+    -------- Each Skill Boxes --------
++    -------- Skill_Boxes_Container --------
 */
 
 
 .Skill_Boxes_Container {
     position: relative;
     width: 100%;
-    display: grid;
-    justify-items: center;
-    align-items: center;
-    /* grid-template-columns: repeat(auto-fit, minmax(130px, 1fr)); */
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-    column-gap: 25px;
-    row-gap: 25px;
     margin-top: 5rem;
     padding: 10px;
     max-width: 735px;
-    /* border: 2px solid ; */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    grid-template-rows: auto;
+    gap: 20px;
 }
 
 
 .Skill_Box {
+    background-color:  rgb(152, 212, 255, 0.2);
+    height: 120px;
+    text-align: center;
+    transition: 200ms ease-in-out background-color, 200ms ease-in-out box-shadow;
+    cursor: pointer;
+    border: 1px solid var(--Green_Color);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 15px;
-    text-align: center;
-    width: 125px;
-    padding: 15px 0px;
-    background-color:  rgb(152, 212, 255, 0.2);
-    border: 1px solid var(--Green_Color);
 }
 
 
+.Skill_Box:hover {
+    background-color:  rgb(152, 212, 255, 0.5);
+    box-shadow: var(--Works_Page_Field_Box_Shadow_Hover);
+}
+
+
+
+
 .Skill_Box img {
-    width: max-content;
-    height: 60px;
-    object-fit: cover;
+    /* width: max-content; */
+    /* height: 60px; */
+    width: 50px;
+    height: 50px;
+    object-fit: contain;
 }
 
 
 .Skill_Box p {
-    font-weight: bold;
-
+    /* font-weight: bold; */
+    font-size: 14px;
+    font-family: sans-serif;
 }
 
 
@@ -439,148 +444,52 @@
 
 
 .Contacts_Page_Section {
-    position: relative;
-    background-color: var(--Works_Contacts_Page_Background_Color);
     width: 100vw;
-    padding-top: 3rem;
-    height: 100vh;
-    min-height: 745px;
-    max-height: 745px;
-    /* max-height: 745px; */
+    min-height: 400px;
+    background-color: var(--Works_Contacts_Page_Background_Color);
+    padding: 3rem 0;
+    display: flex;
+    align-items: center;
 }
 
 
-.Conatcts_Container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    padding: 0 1.5rem;
-    /* border: 2px solid blue; */
+.Contacts_Contanier {
+    width: 100%; 
+    /* background-color: black; */
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
 }
 
 
-#Contacts_Headline {
-    width: max-content;
-    color: var(--Green_Color);
+.Contacts_Contanier article:nth-child(1) p {
     font-size: 35px;
+    color: var(--Green_Color);
     font-style: italic;
     font-weight: bold;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 
-.Contacts_Box {
-    position: relative;
-    margin-top: 3rem;
+.Accounts_Container {
     width: 100%;
-    max-width: 820px;
-    height: 550px;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    background-color: var(--Skill_Page_Contacts_Box_Background_color);
-    border-radius: 50px;
-    box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.9);
-    overflow: hidden;
-}
-
-
-.Space {
-    height: 100%;
-    width: 45%;
-    object-fit: cover;
-}
-
-
-@media(width <= 650px) {
-    .Space {
-        display: none;
-    }
-}
-
-
-.Right_Side_Contact {
-    width: 100%;
-    height: 100%;
-    padding: 50px 50px 0px 30px;
-    display: flex;
-    gap: 30px;
-    flex-direction: column;
-}
-
-
-.Contacts_Input {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    max-width: 735px;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
     gap: 15px;
 }
 
-
-@media(width <= 650px) {
-    .Right_Side_Contact  {
-        padding: 50px 30px 20px 30px;
-    }
-}
-
-
-.Contacts_Input label {
-    font-size: 13px;
-    color: var(--Green_Color);
-    font-weight: bold;
-}
-
-
-.Contacts_Input input {
-    width: 100%;
-    background-color: transparent;
-    font-size: 13px;
-    outline: none;
-    border: 1px solid var(--Green_Color);
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    color: rgba(255, 255, 255, 0.8);
-    font-weight: bold;
-}
-
-
-.Contacts_Input textarea {
-    width: 100%;
-    background-color: transparent;
-    font-size: 13px;
-    outline: none;
-    border: 1px solid var(--Green_Color);
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    color: rgba(255, 255, 255);
-    resize: vertical;
-    min-height: 20px;
-    max-height: 160px;
-}
-
-
-.Send_Btn {
-    width: max-content;
-    padding: 5px 25px;
-    background-color: rgb(166, 242, 255);
-    color: rgb(0, 0, 0);
-    border: none;
-    outline: none;
-    border-radius: 2px;
-    font-weight: 600;
-    margin-left: auto;
-    cursor: pointer;
-    transition: 
-        200ms ease-in-out background-color, 
-        200ms ease-in-out color,
-        200ms ease-in-out box-shadow
-    ;
-}
-
-.Send_Btn:hover {
-    background-color: rgba(152, 212, 255);
-    box-shadow: 0 0 15px var(--Green_Color);
+ 
+.Accounts_Container a {
+    height: 120px;
+    font-size: 40px;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
