--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -82,11 +82,13 @@
     margin: 0 auto;
     width: 100%;
     height: 100%;
-    padding: 2rem 20px;
+    padding: 0 20px;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
     color: black;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 
